feat: support different content types based on schema type
